--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Luccas Betton
-#logo:
-#description:
+logo: /image/Image.jpg
+description: Data Analyst
 # show_downloads: 
 theme: jekyll-theme-minimal
